primera version para probar terminada

--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -67,6 +67,17 @@
             <artifactId>spring-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.utn.ba</groupId>
+            <artifactId>event-dtos</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- Spring Security + Resource Server -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
