--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -26,3 +26,14 @@ logging.level.org.springframework.security.oauth2=DEBUG
 
 logging.level.org.springframework.security.web=TRACE
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+
+# Kafka Consumer Config
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=cart-clear-group
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=org.utn.ba.events.*
+spring.kafka.consumer.properties.spring.json.value.default.type=org.utn.ba.events.ClearCartEvent
+
+# Kafka Topic Configuration
+kafka.topic.clear-cart=cart-clear-commands
