--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -35,3 +35,12 @@ auth0.claims.name=${auth0.claims.namespace}/name
 auth0.claims.given-name=${auth0.claims.namespace}/given_name
 
 logging.level.org.springframework.security.oauth2=DEBUG
+
+
+# Kafka Producer Config
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+# Kafka Topic Configuration
+kafka.topic.order-confirmations=order-confirmations
+kafka.topic.clear-cart=cart-clear-commands
