--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -8,13 +8,13 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.ip-address=localhost
 server.port=9813
 
-# Configuración del Circuit Breaker de Resilience4J
+# ConfiguraciÃ³n del Circuit Breaker de Resilience4J
 resilience4j.circuitbreaker.instances.product.registerHealthIndicator=true
 resilience4j.circuitbreaker.instances.product.sliding-window-size=5
 resilience4j.circuitbreaker.instances.product.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.product.wait-duration-in-open-state=10000
 
-#Configuración del Actuator
+#ConfiguraciÃ³n del Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
