--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=notification-service
 
-#Configuración del Actuator
+#Configuraciï¿½n del Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
@@ -17,10 +17,10 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 spring.kafka.consumer.properties.spring.json.trusted.packages=org.utn.ba.events.*
 spring.kafka.consumer.properties.spring.json.value.default.type=org.utn.ba.events.OrderConfirmationEvent
 
-spring.mail.host=Poner tu host
+spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=Poner tu user
-spring.mail.password=Pensaste que ibas a encontrar my password??
+spring.mail.username=f5186d9bd16a2a
+spring.mail.password=494be2a92cf0b5
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 mail.from=noreply@ddsi-cart.com
