--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=order-service
-# Configuración de la base de datos
+# Configuraciï¿½n de la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/orders?createDatabaseIfNotExist=True
 spring.datasource.username=root
 spring.datasource.password=mariobros
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuración de JPA/Hibernate
+# Configuraciï¿½n de JPA/Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -15,13 +15,13 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.ip-address=localhost
 server.port=9812
 
-# Configuración del Circuit Breaker de Resilience4J
+# Configuraciï¿½n del Circuit Breaker de Resilience4J
 resilience4j.circuitbreaker.instances.product.registerHealthIndicator=true
 resilience4j.circuitbreaker.instances.product.sliding-window-size=5
 resilience4j.circuitbreaker.instances.product.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.product.wait-duration-in-open-state=10000
 
-#Configuración del Actuator
+#Configuraciï¿½n del Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
