--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -2,18 +2,18 @@ spring.application.name=product-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.ip-address=localhost
 server.port=9811
-# Configuración de la base de datos
+# Configuraciï¿½n de la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/products?createDatabaseIfNotExist=True
 spring.datasource.username=root
 spring.datasource.password=mariobros
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuración de JPA/Hibernate
+# Configuraciï¿½n de JPA/Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-#Configuración del Actuator
+#Configuraciï¿½n del Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
