--- a/cart-service/Dockerfile
+++ b/cart-service/Dockerfile
@@ -4,16 +4,15 @@
 FROM maven:3.9.6-eclipse-temurin-17 AS builder
 WORKDIR /app
 
-# Copia TODO el código del monorepo al contenedor
-# Esto es necesario para que Maven pueda encontrar el módulo 'event-dtos'
-COPY . .
+# Copia solo las carpetas que este módulo necesita
+COPY event-dtos ./event-dtos
+COPY cart-service ./cart-service
 
-# 1. Construye e instala 'event-dtos' en el repositorio local de Maven
-RUN mvn -f ./event-dtos/pom.xml clean install
+# 1. Construye e 'instala' event-dtos primero
+RUN mvn -B -f event-dtos/pom.xml clean install -DskipTests
 
 # 2. Ahora, construye el 'cart-service'
-# Maven podrá encontrar la dependencia 'event-dtos' que acaba de instalar
-RUN mvn -f ./cart-service/pom.xml clean package -DskipTests
+RUN mvn -B -f cart-service/pom.xml clean package -DskipTests
 
 # ==========================
 # Etapa 2: Imagen final
@@ -21,10 +20,11 @@ RUN mvn -f ./cart-service/pom.xml clean package -DskipTests
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 
-# Copia solo el JAR compilado de cart-service desde la etapa anterior
-COPY --from=builder /app/cart-service/target/cart-service-*.jar app.jar
+# 3. Copia solo el JAR compilado de cart-service
+# (Usamos *-SNAPSHOT.jar para que coincida con cualquier nombre)
+COPY --from=builder /app/cart-service/target/*-SNAPSHOT.jar app.jar
 
-# Expón el puerto 9813 (definido en tu properties)
+# 4. Expón el puerto 9813 (el de tu cart-service)
 EXPOSE 9813
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
