--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -1,28 +1,29 @@
-# order-service/Dockerfile (compatible con Dokploy sin BuildKit)
+# ==========================
+# Etapa 1: Build de Maven
+# ==========================
 FROM maven:3.9.6-eclipse-temurin-17 AS builder
-WORKDIR /build
+WORKDIR /app
 
-# copiar solo lo necesario (context = raíz del repo)
+# Copia solo las carpetas que este módulo necesita
 COPY event-dtos ./event-dtos
 COPY order-service ./order-service
-# Si necesitás otros módulos, copyá también.
 
-# construir e instalar la librería compartida
+# 1. Construye e 'instala' event-dtos primero
 RUN mvn -B -f event-dtos/pom.xml clean install -DskipTests
 
-# build del order-service
+# 2. Ahora, construye el 'order-service'
 RUN mvn -B -f order-service/pom.xml clean package -DskipTests
 
-# debug temporal (muestra artefactos para ver que existe el jar)
-RUN ls -la /build/order-service/target || true
-RUN ls -la /root/.m2/repository/org/utn/ba/event-dtos/1.0-SNAPSHOT || true
-
-# Imagen runtime
+# ==========================
+# Etapa 2: Imagen final
+# ==========================
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 
-# copia el jar (usa patrón SNAPHOT). Ajustá si tu jar tiene otro nombre.
-COPY --from=builder /build/order-service/target/*-SNAPSHOT.jar app.jar
+# 3. Copia solo el JAR compilado de order-service
+COPY --from=builder /app/order-service/target/*-SNAPSHOT.jar app.jar
 
+# 4. Expón el puerto 9812 (el de tu order-service)
 EXPOSE 9812
+
 ENTRYPOINT ["java","-jar","/app/app.jar"]
