--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -40,7 +40,7 @@ logging.level.org.springframework.security.oauth2=DEBUG
 # Kafka Producer Config
 spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 # Kafka Topic Configuration
 kafka.topic.order-confirmations=order-confirmations
 kafka.topic.clear-cart=cart-clear-commands
