--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -10,6 +10,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+
+# Configuracion del redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
 #Configuracion del Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.ip-address=localhost
