--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# Configuracion del redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
 #Configuracion del Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
