--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=notification-service
 
 #Configuracion del Actuator
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info, metrics, prometheus
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.observations.key-values.application=notification-service
+management.tracing.sampling.probability=1.0
 management.endpoint.health.show-details=always
 
 #Configuracion del Eureka
@@ -16,6 +19,7 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=org.utn.ba.events.*
 spring.kafka.consumer.properties.spring.json.value.default.type=org.utn.ba.events.OrderConfirmationEvent
+spring.kafka.listener.observation-enabled=true
 
 spring.mail.host=Tu host
 spring.mail.port=2525
