--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -15,7 +15,11 @@ resilience4j.circuitbreaker.instances.product.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.product.wait-duration-in-open-state=10000
 
 #Configuración del Actuator
-management.endpoints.web.exposure.include=health,info
+
+management.endpoints.web.exposure.include=health,info, metrics, prometheus
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.observations.key-values.application=cart-service
+management.tracing.sampling.probability=1.0
 management.endpoint.health.show-details=always
 
 # Auth0
@@ -34,6 +38,7 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=org.utn.ba.events.*
 spring.kafka.consumer.properties.spring.json.value.default.type=org.utn.ba.events.ClearCartEvent
+spring.kafka.listener.observation-enabled=true
 
 # Kafka Topic Configuration
 kafka.topic.clear-cart=cart-clear-commands
