--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -8,4 +8,10 @@ eureka.client.fetch-registry=false
 eureka.instance.health-check-url-path=/actuator/health
 eureka.instance.status-page-url-path=/actuator/health
 
+management.endpoints.web.exposure.include=health,info, metrics, prometheus
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.observations.key-values.application=discovery-service
+management.tracing.sampling.probability=1.0
+management.endpoint.health.show-details=always
+
 
