--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -22,7 +22,10 @@ resilience4j.circuitbreaker.instances.product.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.product.wait-duration-in-open-state=10000
 
 #Configuracion del Actuator
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info, metrics, prometheus
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.observations.key-values.application=order-service
+management.tracing.sampling.probability=1.0
 management.endpoint.health.show-details=always
 
 # Auth0
@@ -41,6 +44,7 @@ logging.level.org.springframework.security.oauth2=DEBUG
 spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.template.observation-enabled=true
 # Kafka Topic Configuration
 kafka.topic.order-confirmations=order-confirmations
 kafka.topic.clear-cart=cart-clear-commands
