--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -21,10 +21,10 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=org.utn.ba.events.
 spring.kafka.consumer.properties.spring.json.value.default.type=org.utn.ba.events.OrderConfirmationEvent
 spring.kafka.listener.observation-enabled=true
 
-spring.mail.host=Tu host
+spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=tu user name
-spring.mail.password=Pensaste que ibas a encontrar mi password?
+spring.mail.username=f5186d9bd16a2a
+spring.mail.password=494be2a92cf0b5
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 mail.from=noreply@ddsi-cart.com
