--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -14,7 +14,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #Configuracion del Actuator
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info, metrics, prometheus
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.observations.key-values.application=product-service
+management.tracing.sampling.probability=1.0
 management.endpoint.health.show-details=always
 
 # Auth0
