--- a/infra/prometheus/Dockerfile
+++ b/infra/prometheus/Dockerfile
@@ -1,3 +1,5 @@
 FROM prom/prometheus:v2.46.0
-# Copiamos la config de PROD y la renombramos a la ruta por defecto
-COPY prometheus.yml /etc/prometheus/prometheus.yml
+
+COPY prometheus.prod.yml /etc/prometheus/prometheus.yml
+
+CMD [ "--config.file=/etc/prometheus/prometheus.yml", "--enable-feature=exemplar-storage" ]
