--- a/infra/prometheus/Dockerfile
+++ b/infra/prometheus/Dockerfile
@@ -2,4 +2,5 @@ FROM prom/prometheus:v2.46.0
 
 COPY prometheus.prod.yml /etc/prometheus/prometheus.yml
 
-CMD [ "--config.file=/etc/prometheus/prometheus.yml", "--enable-feature=exemplar-storage" ]
+CMD [ "--config.file=/etc/prometheus/prometheus.yml", \
+"--enable-feature=exemplar-storage" ]
