--- a/infra/prometheus/Dockerfile
+++ b/infra/prometheus/Dockerfile
@@ -1,6 +1,6 @@
 FROM prom/prometheus:v2.46.0
 
-COPY prometheus.prod.yml /etc/prometheus/prometheus.yml
+COPY prometheus.yml /etc/prometheus/prometheus.yml
 
 CMD [ "--config.file=/etc/prometheus/prometheus.yml", \
 "--enable-feature=exemplar-storage" ]
